# i281assembler

./: .gitignore  Cargo.toml  LICENSE.md  README.md  deny.toml
docs/: assembly_mapping_v3.7.md  final_report.odt
docs/diagrams/: ast_address.odg  ast_instruction.odg  ast_literal.odg  ast_root.odg  ast_variable.odg
examples/: BubbleSort.asm
examples/Arithmetic/Arithmetic1/: Arithmetic.asm  Arithmetic.c
examples/Arithmetic/Arithmetic2/: Arithmetic2.asm  Arithmetic2.c
examples/Arithmetic/Multiplication/: Multiplication.asm  Multiplication.c
examples/Arithmetic/MultiplicationWithLoop/: MultiplicationWithLoop.asm  MultiplicationWithLoop.c
examples/Array/Array_Operations/: Array.asm  Array.c
examples/Array/Array_plus5/: Array_plus5.asm  Array_plus5.c
examples/If_Statement/If_Equal/: If_Equal.asm  If_Equal.c
examples/If_Statement/If_Greater/: If_Greater.asm  If_Greater.c
examples/If_Statement/If_Greater_than_or_Equal/: If_Greater_than_or_Equal.asm  If_Greater_than_or_Equal.c
examples/If_Statement/If_Less/: If_Less.asm  If_Less.c
examples/If_Statement/If_Less_than_or_Equal/: If_Less_than_or_Equal.asm  If_Less_than_or_Equal.c
examples/If_Statement/If_NotEqual/: If_NotEqual.asm  If_NotEqual.c
examples/If_Statement/If_with_Else/: If_Else.asm  If_Else.c
examples/Loops/Do_Loop/: Do_Loop.asm  Do_Loop.c
examples/Loops/For_Loop/: For_Loop.asm  For_Loop.c
examples/Loops/For_Loop_unrolling/: For_Loop_unrolling.asm  For_Loop_unrolling.c
examples/Loops/While_Loop/: While_Loop.asm  While_Loop.c
examples/Search_Algorithms/Binary_Search/: Binary_Search.asm  Binary_Search.c
examples/Search_Algorithms/Linear_Search/: LinearSearch.asm  LinearSearch.c
examples/Sorting_Algorithms/Bubble_Sort/: .BubbleSort.asm.kate-swp  (+1 more)
examples/Struct/: Struct.asm  Struct.c
examples/Switch_Statement/: Switch.asm  Switch.c
examples/User_Input_from_Switches/: Addition_With_User_Input.asm  Addition_With_User_Input.c
i281_ast/: Cargo.toml
i281_ast/src/: address.rs  constant.rs  directive.rs  error.rs  error_improved.rs  instruction.rs  label.rs  lib.rs  pointer.rs  root.rs  segment.rs  util.rs  variable.rs
i281_ast/src/error/: mod.rs
i281_ast/src/primitive/: ident.rs  keyword.rs  literal.rs  mod.rs  opcode.rs  oper.rs  punct.rs  register.rs
i281_compiler/: Cargo.toml
i281_compiler/src/: analyzer.rs  compiler.rs  error.rs  instruction_builder.rs  intermediate.rs  lib.rs  verilog.rs  writers.rs
i281_core/: Cargo.toml
i281_core/src/: lib.rs  token_iter.rs  type_enum.rs
i281_ir/: Cargo.toml
i281_ir/src/: branch_condition.rs  builder.rs  input_mode.rs  instruction.rs  lib.rs  opcode.rs  register.rs  shift_direction.rs  variable.rs
src/: compiler.rs  error.rs  lib.rs  main.rs  static_analysis.rs  tokenizer.rs
test_output/: User_Code_High.v  User_Code_Low.v  User_Data.v
(+12 files in other folders)
