[package]
name = "i281assembler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "i281_core",
    "i281_ast",
]

[dependencies]
i281_ast = { path = "./i281_ast", features = ["serde"] }
i281_core = { path = "./i281_core" }

thiserror = "1"
color-eyre = "0.6"

clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
walkdir = "2"
