[package]
name = "i281assembler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "i281_ast",
    "i281_compiler",
]

[dependencies]
i281_ast = { path = "./i281_ast", features = ["serde"] }
i281_compiler = { path = "./i281_compiler" }
miette = { version = "5", features = ["fancy"] }


clap = { version = "4", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
walkdir = "2"
